# clutch-or-predict

./: .dockerignore  .releaserc.json  CHANGELOG.md  README.md  Taskfile.yaml  docker-compose.yaml  hello.py  pyproject.toml
.github/workflows/: release.yaml
article/: main.bib  main.typ  scraping.typ
docker/: browser-entrypoint.sh  browser.Dockerfile  celery-worker.Dockerfile  scraper-node.docker-compose.yaml
examples/: celery_example.py  event.py  simple_example.py
notebooks/: 01-data-engineering.ipynb  01-eda.ipynb  02-data-engineering.ipynb  02-match-predictor.ipynb
src/browser/: pyproject.toml
src/browser/src/browser/: __init__.py
src/db/: config.py  db.py  pool.py  settings.yaml
src/db/migrations/: __init__.py
src/scraper/: __init__.py  browser.py  celery.py  config.py  db_ops.py  event.py  frontier.py  map.py  match.py  models.py  player.py  pool.py  pyproject.toml  settings.yaml  top_events_frontier.py  vetos.py  worker.py
src/scraper/src/scraper/: celery.py  frontier.py  player.py  pool.py  top_events_frontier.py  vetos.py  worker.py
src/scraper/tasks/: __init__.py
