[project]
name = "clutch_or_predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.uv]
package = true

[tool.uv.workspace]
members = ["src/scraper", "packages/db", "src/browser", "packages/conf", "packages/notebooks"]

[dependency-groups]
dev = ["ruff>=0.14.8"]

[project.scripts]
migrate = "db.migrations:main"
