[project]
name = "browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Said Rodrigues", email = "coderflemis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "patchright>=1.56.0",
    "conf",
]

[tool.uv.sources]
conf = { workspace = true }

[project.scripts]
browser = "browser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
